# multimodal-vae-comparison

./: .gitignore  CMakeLists.txt  README.md  builddocs.txt  environment.yml  package.xml  requirements.txt  setup.cfg  setup.py
data/: attrs.pkl
docs/: Makefile
docs/doctrees/: environment.pickle  index.doctree
docs/html/: index.html  objects.inv  searchindex.js
docs/source/: conf.py  index.rst  results.rst
mirracle_multimodal/: config1.yml  config1mod.yml  config2mods.yml  config3mods.yml  configinc.yml  configinc_replay1.yml  configinc_replay2.yml  configinc_replay3.yml  configinc_replay4.yml  configinc_replay5.yml  fuse.py  incremental_learn.py  incremental_learn_exp.py  infer.py  main.py  objectives.py  utils.py  vis.py
mirracle_multimodal/configs_latent_dim/: moe_0.yml  moe_1.yml  moe_10.yml  moe_11.yml  moe_2.yml  moe_3.yml  moe_4.yml  moe_5.yml  moe_6.yml  moe_7.yml  moe_8.yml  moe_9.yml  poe_0.yml  poe_1.yml  poe_10.yml  poe_11.yml  poe_2.yml  poe_3.yml  poe_4.yml  poe_5.yml  poe_6.yml  poe_7.yml  poe_8.yml  poe_9.yml
mirracle_multimodal/data_proc/: generate_configs.py  generate_dataset.py  process_audio.py  train_w2v.py
mirracle_multimodal/mmvae/: config1.yml  objectives.py  vis.py
mirracle_multimodal/models/: __init__.py  decoders.py  encoders.py  mmvae.py  mmvae_base.py  mmvae_models.py  mmvae_own.py  nn_modules.py  vae.py  (+2 more)
mmvae/: config1.yml  generate_dataset.py  main.py  objectives.py  utils.py
msg/: Array.msg
multimodal_compare/: autofind_params.py  config1.yml  iterate_configs.sh  main.py  objectives.py  utils.py  visualization.py
(+1254 files in other folders)
